Added many updates, close to a release we are